--- a/style/main.less
+++ b/style/main.less
@@ -1,6 +1,6 @@
 /* 
     Created on : August 24, 2014, 21:20:19 
-    Author  : Matus Macak FOLCON, s.r.o | matus.macak@folcon.sk
+    Author  : Matus Macak| matus.macak@orchidsphere.com
     Version : Developer version of global stylesheet, overides bootstrap definitions
 */ 
 
@@ -45,8 +45,10 @@
         @media(min-width:1200px){}
 */
 
-/* Bootstrap */
-@import url('bootstrap/css/bootstrap.css'); 
+@import url('bootstrap/less/variables.less'); 
+@import url('variables.less'); 
+@import url('bootstrap.less'); 
+@import url('less/utility.less');
 
 html{
     min-height: 100%;
@@ -98,21 +100,21 @@ abbr{
 
 /* Bootstrap override */
 .btn-info{
-    background-color: #33cc99;
-    border-color: #279d76; 
+    background-color: @brand-primary;
+    border-color: darken(@brand-primary, 5%); 
 }
 .btn-info:hover, .btn-info:focus{
-    background-color: #279d76;
-    border-color: #248f6b
+    background-color: darken(@brand-primary, 5%);
+    border-color: darken(@brand-primary, 7%)
 }
 .btn-info.disabled, .btn-info[disabled]
 /*, fieldset[disabled] .btn-info, .btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover, .btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus, .btn-info.disabled:active, .btn-info[disabled]:active, fieldset[disabled] .btn-info:active, .btn-info.disabled.active, .btn-info[disabled].active, fieldset[disabled] .btn-info.active */
 {
     background-color: #99e5cc;
-    border: #279d76
+    border: darken(@brand-primary, 5%)
 }
 .form-control:focus{
-    border-color: #279d76;
+    border-color: darken(@brand-primary, 5%);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(51, 204, 153, .4);
 }
 .panel{
@@ -126,12 +128,12 @@ abbr{
     font-size: 95%;
 }
 .panel.panel-info{
-    border-color: #33cc99;
+    border-color: @brand-primary;
 }
 .panel-info>.panel-heading{
-    color: #33cc99;
+    color: @brand-primary;
     background-color: transparent;
-    border-color: #33cc99;
+    border-color: @brand-primary;
 }
 .panel-info>.panel-heading>*{
     font-weight: bold !important;
@@ -157,7 +159,7 @@ abbr{
     margin-bottom: 0;
 }
 .progress-bar-info{
-    background-color: #33cc99;
+    background-color: @brand-primary;
 }
 .row>hr{
     margin-right: 15px;
@@ -168,6 +170,11 @@ hr{
     margin-bottom: 10px;
     border-top-color: #ddd;
 }
+/* Google map */
+.map-thumb .gmnoprint {
+    display: none;
+}
+
 /*Workout view*/
 #chart-canvas{
     margin: 0 -10px;
